# rust-graphql-exercise

./: .gitignore  App.toml  Cargo.toml  README.md  flake.nix
src/: aws.rs  config.rs  database.rs  dynamodb.rs  graphql.rs  main.rs  serving.rs  webserver.rs
src/database/: dynamodb.rs
src/dynamodb/: config.rs  errors.rs  item.rs  table.rs
src/graphql/: errors.rs  id.rs  model.rs  todo.rs  todo_list.rs  types.rs
src/graphql/model/: todo.rs  todo_list.rs
src/graphql/model/todo/: extensions.rs  mutation.rs  query.rs
src/graphql/model/todo_list/: extensions.rs  mutation.rs  query.rs
src/graphql/types/: id.rs
tf/: main.tf  project.tf  state.tf  terraform.tfvars  variable.tf
