[package]
name = "rust-graphql-exercise"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Serving
async-graphql = { version = "4.0.13", features = ["tokio", "tracing"] }
tokio = { version = "1.21.0", features = ["full"] }
actix-web = "4.2.1"
async-graphql-actix-web = "4.0.13"
aws-config = "0.48.0"
aws-sdk-dynamodb = "0.18.0"
ulid = { version = "1.0.0", features = ["serde"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0.144", features = ["derive"] }

# Tracing
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.3"
tracing-actix-web = "0.6.0"
tracing-appender = "0.2.2"

# Utilities
tokio-stream = "0.1.9"
anyhow = "1.0.64"
thiserror = "1.0.34"
async-trait = "0.1.57"
